# test-case-infotecs

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompileOptions.cmake
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/apps/: client_app.cpp  server_app.cpp
src/client/: CMakeLists.txt
src/client/client/: client.cpp  client.hpp
src/common/: CMakeLists.txt
src/common/common/: parser.cpp  parser.hpp  parser.test.cpp
src/server/: CMakeLists.txt
src/server/server/: server.cpp  server.hpp
